# hpx-collectives-demo

./: CMakeLists.txt  README.md  collective_demo.cpp  hello_hpx.cpp  matrix_multiplication_demo.cpp
